AC_INIT(vision, [], [])
AC_CONFIG_SRCDIR([vision.cabal])

AC_ARG_WITH(compiler, [])

AC_CONFIG_FILES(Makefile
                ui/Makefile
				src/Makefile
                src/Properties/Makefile
                src/Properties/Editor/Makefile
                src/Playlist/Makefile
                src/Playlist/Format/Makefile
                src/Location/Makefile
                src/Collection/Makefile
                src/Collection/List/Makefile
                src/Control/Makefile
                src/Control/Concurrent/Makefile
                src/Control/Concurrent/STM/Makefile)
AC_OUTPUT
