name:               vision
version:            0.0.0.0

author:             Oleg Belozeorov
maintainer:         Oleg Belozeorov <upwawet@gmail.com>
copyright:          (C) 2010 Oleg Belozeorov
license:            GPL-3
license-file:       COPYING

category:           Sound
synopsis:           An XMMS2 client.
description:
  Vision (for the Voice) is an X-platform Music Multiplexing System 2
  (http://xmms2.xmms.se) client aiming to eventually fit its author's
  views on listening to music, managing a music library etc. Only the
  time can tell what will come of that :]

cabal-version:      >= 1.2
build-type:         Simple
extra-tmp-files:    config.status, config.log, autom4te.cache
data-files:         ui/*.xml

executable vision
  main-is:          Vision.hs
  other-modules:    Handler,
                    Utils,
                    Env,
                    XMMS,
                    Environment,
                    Medialib,
                    UI,
                    Atoms,
                    Config,
                    Properties,
                    Properties.Property,
                    Properties.Model,
                    Playback,
                    Playtime,
                    Playlist,
                    Playlist.Model,
                    Playlist.View,
                    Playlist.UI,
                    Playlist.Update,
                    Playlist.DnD,
                    Playlist.Index,
                    Playlist.Format,
                    Playlist.Format.Format,
                    Playlist.Format.Parser
  hs-source-dirs:   src
  build-depends:    base, xmms2-client >= 0.0.3.6,
                    xmms2-client-glib >= 0.0.3.6,
                    gtk, containers, mtl, utf8-string,
                    filepath, directory, glib, array,
                    MonadCatchIO-mtl, json, parsec >= 3.0.1
  extensions:       ImplicitParams, NoMonomorphismRestriction,
                    FlexibleContexts, FlexibleInstances,
                    TupleSections
  ghc-options:      -W
